添加了typecho-export 修改了图片css

--- a/src/main/resources/theme/moricolor/public/css/mori.css
+++ b/src/main/resources/theme/moricolor/public/css/mori.css
@@ -233,7 +233,7 @@ hr {
   font-size:15px;
 }
 .post-content p img {
-  box-shadow: 0 2px 15px 0px rgba(0,0,0,0.1);
+  /*box-shadow: 0 2px 15px 0px rgba(0,0,0,0.1);*/
   display:block;
   margin:0 auto;
   text-align: center;
